fix build command

--- a/.github/workflows/firebase-hosting-pull-request.yml
+++ b/.github/workflows/firebase-hosting-pull-request.yml
@@ -9,7 +9,7 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - run: |
-          cd khitma
+          cd majalaat
           npm i
           ng build --prod
       - uses: FirebaseExtended/action-hosting-deploy@v0
