--- a/.github/workflows/firebase-hosting-merge.yml
+++ b/.github/workflows/firebase-hosting-merge.yml
@@ -12,7 +12,7 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - run: |
-          cd khitma
+          cd majalaat
           npm i
           ng build --prod
       - uses: FirebaseExtended/action-hosting-deploy@v0
