--- a/majalaat/package.json
+++ b/majalaat/package.json
@@ -26,6 +26,7 @@
     "@angular/router": "~11.2.3",
     "firebase": "^7.0 || ^8.0",
     "ng-recaptcha": "^7.0.1",
+    "ng2-search-filter": "^0.5.1",
     "ngx-markdown": "^11.1.2",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
@@ -39,7 +40,7 @@
     "@types/jasmine": "~3.6.0",
     "@types/node": "^12.11.1",
     "codelyzer": "^6.0.0",
-    "firebase-tools": "^8.0.0",
+    "firebase-tools": "^7.2.4",
     "fuzzy": "^0.1.3",
     "inquirer": "^6.2.2",
     "inquirer-autocomplete-prompt": "^1.0.1",
