changed home page + removed limits

--- a/majalaat/angular.json
+++ b/majalaat/angular.json
@@ -124,6 +124,10 @@
               "devServerTarget": "majalaat:serve:production"
             }
           }
+        },
+        "deploy": {
+          "builder": "@angular/fire:deploy",
+          "options": {}
         }
       }
     }
