--- a/majalaat/package.json
+++ b/majalaat/package.json
@@ -27,6 +27,7 @@
     "firebase": "^7.0 || ^8.0",
     "ng-recaptcha": "^7.0.1",
     "ng2-search-filter": "^0.5.1",
+    "ngx-google-analytics": "^11.2.1",
     "ngx-markdown": "^11.1.2",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
